kubernetes/bank/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bank-frontend
  namespace: bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: bank-frontend

  template:

    metadata:
      labels:
        app: bank-frontend

    spec:

      containers:

      - name: bank-frontend

        image: hajlilahcen/bank-frontend:1

        imagePullPolicy: Always

        ports:

        - containerPort: 80
