kubernetes/bank/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bank-ingress
  namespace: bank

spec:

  ingressClassName: traefik

  rules:

  - host: node1

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: bank-frontend

            port:

              number: 80
